<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">background image</string>
    <string name="app_logo">App Logo</string>
    <string name="desired_league">Desired League:</string>
    <string name="mens">Mens</string>
    <string name="next">NEXT</string>
    <string name="womens">Womens</string>
    <string name="co_ed">Co-ed</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="intro"><![CDATA[Find a team in your city & dominate the league]]></string>
    <string name="get_started">GET STARTED</string>
    <string name="i_am_a">I am a:</string>
    <string name="begginner">Beginner</string>
    <string name="baller">Baller</string>
    <string name="finish">Finish</string>
    <string name="search_league">Looking for a co-ed beginner league near you...</string>
</resources>
