<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.MainActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/welcomescreenbg"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/background_image"/>
    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView2"
            android:scaleType="fitCenter" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="@+id/imageView" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:contentDescription="@string/app_logo"/>
    <TextView
            android:text="@string/go_all_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:textColor="@android:color/white"
            android:fontFamily="@font/montserrat" android:textSize="50sp" android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:textAlignment="center"/>
    <TextView
            android:text="@string/on_going_all_out"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="@+id/textView" app:layout_constraintEnd_toEndOf="@+id/textView"
            android:textSize="24sp" android:fontFamily="@font/montserrat"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.0" android:textStyle="bold" android:textAlignment="center"/>
    <TextView
            android:text="@string/intro"
            android:layout_width="253dp"
            android:layout_height="47dp"
            android:id="@+id/textView3" android:fontFamily="@font/montserrat"
            android:textColor="@android:color/white" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:singleLine="false"
            android:textAlignment="center" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/get_started"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/btnGetStarted" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:background="@drawable/swoosh_button" android:fontFamily="@font/montserrat" android:textSize="20sp"
            android:textStyle="bold" android:textColor="@android:color/white"/>

</android.support.constraint.ConstraintLayout>