<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LeagueActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/desiredleaguebg"
            android:id="@+id/imageView3" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/background_image"/>

    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView2"
            android:scaleType="fitCenter" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:contentDescription="@string/app_logo"/>

    <TextView
            android:text="@string/desired_league"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:textSize="18sp"
            android:fontFamily="@font/montserrat" android:textColor="@android:color/white"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.497" android:layout_marginTop="70dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"/>

    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/buttonNext"
            android:background="@drawable/swoosh_button" android:fontFamily="@font/montserrat" android:textSize="20sp"
            android:textStyle="bold" android:textColor="@android:color/white"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/imageView3" app:layout_constraintStart_toStartOf="@+id/imageView3"
            android:layout_marginStart="24dp" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginEnd="24dp">
        <ToggleButton
                android:text="@string/mens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/togbtnMens" android:textOff="@string/mens"
                android:textOn="@string/mens" android:textAllCaps="false" android:textColor="@android:color/white"
                android:background="@drawable/swoosh_toggle" android:fontFamily="@font/montserrat"
                android:textSize="18sp" android:textStyle="bold"/>
        <ToggleButton
                android:text="@string/womens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/togbtnWomens" android:textAllCaps="false"
                android:textColor="@android:color/white" android:background="@drawable/swoosh_toggle"
                android:layout_marginTop="16dp" android:layout_marginBottom="16dp"
                android:fontFamily="@font/montserrat" android:textOff="@string/womens" android:textOn="@string/womens"
                android:textSize="18sp" android:textStyle="bold"/>
        <ToggleButton
                android:text="@string/co_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/togbtnCoed" android:textAllCaps="false"
                android:textColor="@android:color/white" android:background="@drawable/swoosh_toggle"
                android:fontFamily="@font/montserrat" android:textOff="@string/co_ed" android:textOn="@string/co_ed"
                android:textSize="18sp" android:textStyle="bold"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>