<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SkillActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/imageView3" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/background_image" app:srcCompat="@drawable/beginnerballerbg"/>
    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView2"
            android:scaleType="fitCenter" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:contentDescription="@string/app_logo"/>
    <TextView
            android:text="@string/i_am_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:fontFamily="@font/montserrat"
            android:textColor="@android:color/white" android:textSize="18sp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp">
        <ToggleButton
                android:text="@string/begginner"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/toggleButton" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:textColor="@android:color/white"
                android:fontFamily="@font/montserrat" android:textSize="18sp" android:textOff="@string/begginner"
                android:textOn="@string/begginner" android:layout_marginEnd="16dp"/>
        <ToggleButton
                android:text="@string/baller"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/toggleButton2" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:textColor="@android:color/white"
                android:fontFamily="@font/montserrat" android:textSize="18sp" android:textOff="@string/baller"
                android:textOn="@string/baller" android:layout_marginStart="16dp"/>
    </LinearLayout>
    <Button
            android:text="@string/finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3" app:layout_constraintHorizontal_bias="0.6"
            android:background="@drawable/swoosh_button" android:textColor="@android:color/white"
            android:fontFamily="@font/montserrat" android:textSize="20sp" android:textStyle="bold"/>

</android.support.constraint.ConstraintLayout>